--- a/public/recommend_Q1.html
+++ b/public/recommend_Q1.html
@@ -230,11 +230,11 @@
     </div>
   </header>
 
-<main class="container my-5 justify-content-center d-flex flex-column min-vh-100">
-  <br><br>
+<main class="container my-5 justify-content-center d-flex flex-column">
+  <img src="./img/white3.JPG" alt="" class="mx-2 my-5">
+  <img src="./img/white3.JPG" alt="" class="mx-2 my-5">
   <p class="title" align="center">재미로보는 비건제품 추천</p>
   </div>
-  <br><br>
 
   <p class="Que" align="center">Q.지금 나에게 필요한 것은?</p>
   <br><br>
@@ -276,17 +276,9 @@
         <a href="./recommend_perfume.html"><img src="./img/05.jpg" alt="" class="mx-2 my-3"></a>
       </div>
     </div>
-    <div class="row">
-      <div class="col">
-
-        <img src="./img/white.JPG" alt="" class="mx-2 my-5">
-        <img src="./img/white.JPG" alt="" class="mx-2 my-5">
-        <img src="./img/white.JPG" alt="" class="mx-2 my-5">
-        <img src="./img/white.JPG" alt="" class="mx-2 my-5">
-
-      </div>
-    </div>
   </div>
+  <img src="./img/white3.JPG" alt="" class="mx-2 my-5">
+  <img src="./img/white3.JPG" alt="" class="mx-2 my-5">
 </main>
 
 
