--- a/public/recommend_skin.html
+++ b/public/recommend_skin.html
@@ -11,6 +11,7 @@
     <style>
         #logo{
             height: 45px;
+            padding-left: 6px;
         }
         a.dropdown-item{
             text-align: end;
