--- a/public/information_post.html
+++ b/public/information_post.html
@@ -136,8 +136,8 @@ main{
           <li><a href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light" id="help">Home</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li><a href="./information_vegan.html" class="nav-link px-2 link-light" id="help2">About</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li><a href="./information_news.html" class="nav-link px-2 link-light" id="help3">Contents</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <li><a href="http://127.0.0.1:3000/show_item" class="nav-link px-2 link-light">Shop</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <li><a href="http://127.0.0.1:3000/recommend_start.html" class="nav-link px-2 link-light">Recommend</a></li>
+          <li><a href="http://127.0.0.1:3000/show_item" class="nav-link px-2 link-light" id="help4">Shop</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <li><a href="http://127.0.0.1:3000/recommend_start.html" class="nav-link px-2 link-light" id="help5">Recommend</a></li>
         </ul>
   
         <div class="col-md-3 text-end">
