--- a/public/recommend_clean.html
+++ b/public/recommend_clean.html
@@ -11,6 +11,7 @@
 
         #logo{
             height: 45px;
+            padding-left: 6px;
         }
         a.dropdown-item{
             text-align: end;
