--- a/public/recommend_result.html
+++ b/public/recommend_result.html
@@ -10,6 +10,7 @@
     <style>
         #logo{
             height: 45px;
+            padding-left: 6px;
         }
         a.dropdown-item{
             text-align: end;
