--- a/public/recommend_start.html
+++ b/public/recommend_start.html
@@ -45,6 +45,7 @@
       width: 100%;
     }
 
+
     @font-face {
       font-family: 'Recipekorea';
       src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/Recipekorea.woff') format('woff');
@@ -163,6 +164,15 @@
     body {
       background-color: rgb(238, 238, 238);
     }
+    #bg0001 {
+      background:url("./img/배경\ 테스트.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center center;
+      width: 100%;
+      height: 1000px;
+      /* background-image: url(./img/배경\ 테스트.png); */
+    }
   </style>
 
 
@@ -216,8 +226,8 @@
     </div>
 </header>
 
-  <main class="container my-5 justify-content-center d-flex flex-column min-vh-100">
-    <br><br>
+  <!-- <main class="container justify-content-center d-flex flex-column min-vh-100" id="bg0001"> -->
+    <main class="container justify-content-center d-flex flex-column min-vh-100" id="bg0001">
     <p class="title" align="center">재미로 보는 비건제품 추천</p>
     </div>
     <br><br>
@@ -226,7 +236,6 @@
     <br><br>
 
     <div class="container col-12" style="margin: 0 auto;">
-      <img src="./img/whiteBG3.png" alt="" class="img-fluid">
 
       
       <div class="row">
@@ -235,9 +244,6 @@
         </div>
       </div>
       
-      <img src="./img/whiteBG3.png" alt="" class="img-fluid">
-      <img src="./img/whiteBG3.png" alt="" class="img-fluid">
-      <img src="./img/whiteBG3.png" alt="" class="img-fluid">
 
     </div>
   </main>
