--- a/public/recommend_Q1.html
+++ b/public/recommend_Q1.html
@@ -62,7 +62,7 @@
       color: #000;
       text-decoration: none;
       font-family: 'Recipekorea';
-      font-size: 70px;
+      font-size: 50px;
     }
 
     .Que {
@@ -70,7 +70,7 @@
       color: #000;
       text-decoration: none;
       font-family: 'Recipekorea';
-      font-size: 50px;
+      font-size: 30px;
     }
 
     #help,
@@ -157,6 +157,15 @@
     body{
       background-color: rgb(238,238,238);
     }
+    #bg0001 {
+      background:url("./img/질문배경2.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center center;
+      width: 100%;
+      height: 1000px;
+      /* background-image: url(./img/배경\ 테스트.png); */
+    }
   </style>
 
 
@@ -231,7 +240,7 @@
     </div>
   </header>
 
-<main class="container my-5 justify-content-center d-flex flex-column">
+<main class="container justify-content-center d-flex flex-column" id="bg0001">
   <img src="./img/white3.JPG" alt="" class="mx-2 my-5">
   <img src="./img/white3.JPG" alt="" class="mx-2 my-5">
   <p class="title" align="center">재미로보는 비건제품 추천</p>
