--- a/public/recommend_makeup.html
+++ b/public/recommend_makeup.html
@@ -53,14 +53,14 @@ a, a:link {
   color: #000;
   text-decoration: none;
   font-family: 'Recipekorea';
-  font-size: 70px;
+  font-size: 50px;
 }   
 .Que {
     /* p.Que(질문)태그 글자 서식 */
   color: #000;
   text-decoration: none;
   font-family: 'Recipekorea';
-  font-size: 50px;
+  font-size: 30px;
 }  
 #help,#help2,#help3,#help4,#help5,#help10,#help11,#help12,#help13,#help14{
   color: white;
@@ -123,7 +123,14 @@ main{
 body{
   background-color: rgb(238,238,238);
 }
-
+#bg0001 {
+      background:url("./img/질문배경3.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center center;
+      width: 100%;
+      height: 1000px;
+    }
         
     </style>
 
@@ -192,24 +199,24 @@ body{
           </div>
         </div>
     </header>
-  <main class="container my-5 justify-content-center d-flex flex-column min-vh-100">
-    <br><br><p class="title" align = "center">재미로보는 비건제품 추천</p></div>
+  <main class="container justify-content-center d-flex flex-column min-vh-100" id="bg0001">
+    <br><br><br><p class="title" align = "center">재미로보는 비건제품 추천</p></div>
     <br><br>
     
     <p class = "Que" align = "center">Q.나는 이런 메이크업을 원해!</p>
-    <br><br>
+  
    
  <div class="container">
      <div class="row">
        <div class="col">
-           <a href="http://127.0.0.1:3000/random_makeup_base"><img src="./img/55.jpg" alt="" class="mx-5 my-3"></a>
-           <a href="http://127.0.0.1:3000/random_makeup_lips"><img src="./img/66.jpg" alt="" class="mx-5 my-3"></a>
+           <a href="http://127.0.0.1:3000/random_makeup_base"><img src="./img/55.png" alt="" class="mx-5 my-3"></a>
+           <a href="http://127.0.0.1:3000/random_makeup_lips"><img src="./img/66.png" alt="" class="mx-5 my-3"></a>
        </div>
      </div>
      <div class="row">
          <div class="col">
-             <a href="http://127.0.0.1:3000/random_makeup_eye"><img src="./img/77.jpg" alt="" class="mx-5 my-3"></a>
-             <a href="http://127.0.0.1:3000/random_makeup_blush"><img src="./img/88.jpg" alt="" class="mx-5 my-3"></a>
+             <a href="http://127.0.0.1:3000/random_makeup_eye"><img src="./img/77.png" alt="" class="mx-5 my-3"></a>
+             <a href="http://127.0.0.1:3000/random_makeup_blush"><img src="./img/88.png" alt="" class="mx-5 my-3"></a>
          </div>   
          </div>
          <!-- <div class="row">
