--- a/public/recommend_start.html
+++ b/public/recommend_start.html
@@ -67,7 +67,7 @@
       color: #000;
       text-decoration: none;
       font-family: 'Recipekorea';
-      font-size: 70px;
+      font-size: 50px;
     }
 
     .Que {
@@ -165,7 +165,7 @@
       background-color: rgb(238, 238, 238);
     }
     #bg0001 {
-      background:url("./img/배경\ 테스트.png");
+      background:url("./img/추천배경4.png");
       background-repeat: no-repeat;
       background-size: contain;
       background-position: center center;
@@ -240,7 +240,7 @@
       
       <div class="row">
         <div class="col">
-          <a href="./recommend_Q1.html"><img src="./img/시작버튼.jpg" alt="" class="col-md-5 col-sm-8"></a>
+          <a href="./recommend_Q1.html"><img src="./img/시작버튼.png" alt="" class=""></a>
         </div>
       </div>
       
