--- a/public/recommend_makeup.html
+++ b/public/recommend_makeup.html
@@ -69,7 +69,7 @@ a, a:link {
 #help6,#help7,#help8,#help9,#menu_li{
   color: black;
   font-family: Helvetica Nene;
-  text-align: end;+
+  text-align: end;
 }
 
 @media (max-width: 1068px) {
