이것저것 수정

--- a/public/recommend_perfume.html
+++ b/public/recommend_perfume.html
@@ -233,7 +233,7 @@ body{
          </div> -->
       <div class="row">
         <div class="col">
-          <img src="./img/white.JPG" alt="" class="mx-5 my-3">
+          <!-- <img src="./img/white.JPG" alt="" class="mx-5 my-3"> -->
 
         </div>
       </div>
