찾기 오류 수정

--- a/public/find_id.html
+++ b/public/find_id.html
@@ -103,11 +103,12 @@
             <label for="floatingInput">이름</label>
           </div>
           <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" name="email" placeholder="Password">
+            <input type="text" class="form-control" id="floatingPassword" name="email" placeholder="Password">
             <label for="floatingPassword">이메일</label>
           </div>
           <div>
             <br>
+            <input type="hidden" name="find_type" value="아이디">
             <button class="w-100 btn btn-lg btn-success" type="submit">아이디 찾기</button>
           </div>
           <br>
