--- a/public/find_pw.html
+++ b/public/find_pw.html
@@ -103,11 +103,12 @@
             <label for="floatingInput">아이디</label>
           </div>
           <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" name="email" placeholder="Password">
+            <input type="text" class="form-control" id="floatingPassword" name="email" placeholder="Password">
             <label for="floatingPassword">이메일</label>
           </div>
           <div>
             <br>
+            <input type="hidden" name="find_type" value="비밀번호">
             <button class="w-100 btn btn-lg btn-success" type="submit">비밀번호 찾기</button>
           </div>
           <br>
